--- a/_css/main.css
+++ b/_css/main.css
@@ -1,3 +1,5 @@
+
+
 /* -lynda.com base template styles
  based partially from normalize.css v3.0.0 | MIT License | git.io/normalize 
  and includes micro-clearfix by Nicolas Gallagher http://nicolasgallagher.com/micro-clearfix-hack/
@@ -80,6 +82,37 @@ pre {
 	word-wrap: break-word;
 	overflow: auto;
 }
+
+
+
+/* Specific elements
+ ========================================================================*/
+header,main,footer {
+  padding: 0 2em;
+}
+header {
+   border-bottom:1px solid rgb(157,189,198);
+   margin-bottom: 1em;
+   background: rgb(218,234,239);
+ }
+header h1 {
+   color: rgb(127,64,45);
+   padding-top: 1em;
+ }
+
+ main h2 {
+   margin-top: 0.2em;
+   margin-bottom: 0.5em;
+ }
+  main h3 {
+   margin-top: 0.2em;
+   margin-bottom: 0;
+ }
+ footer {
+   background: rgb(157,189,198);
+   padding: 2em;
+   font-size: 0.8em;
+ }
 
 /* Forms
    ========================================================================== */
